fix: Adds overflow:visible to buttons to fix IE11 clipping issue (#647)

--- a/draft-packages/button/KaizenDraft/Button/styles.scss
+++ b/draft-packages/button/KaizenDraft/Button/styles.scss
@@ -53,6 +53,7 @@ $caButton-verticalPaddingForm: calc(
   text-align: center;
   cursor: pointer;
   text-align: center;
+  overflow: visible; // Required for the focus ring on IE11
 
   // looking for padding? See %caButtonContent
 
